# mlops-cicd-pipeline

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  example_request.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
src/: __init__.py  app.py  data.py  model.py  predict.py  train.py  validate_model.py
tests/: test_data.py  test_model.py  test_predict.py
