[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Proyecto de ejemplo MLOps con CI/CD para GitHub Actions"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
